JumpScript/tests/baselines/reference/typedArraysCrossAssignability01.errors.txt
tests/cases/compiler/typedArraysCrossAssignability01.jump(13,5): error TS2322: Type 'Uint8Array' is not assignable to type 'Int8Array'.
  Types of property '[Symbol.toStringTag]' are incompatible.
    Type '"UInt8Array"' is not assignable to type '"Int8Array"'.
tests/cases/compiler/typedArraysCrossAssignability01.jump(14,5): error TS2322: Type 'Int16Array' is not assignable to type 'Int8Array'.
  Types of property '[Symbol.toStringTag]' are incompatible.
    Type '"Int16Array"' is not assignable to type '"Int8Array"'.
tests/cases/compiler/typedArraysCrossAssignability01.jump(15,5): error TS2322: Type 'Uint16Array' is not assignable to type 'Int8Array'.
  Types of property '[Symbol.toStringTag]' are incompatible.
    Type '"Uint16Array"' is not assignable to type '"Int8Array"'.
tests/cases/compiler/typedArraysCrossAssignability01.jump(16,5): error TS2322: Type 'Int32Array' is not assignable to type 'Int8Array'.
  Types of property '[Symbol.toStringTag]' are incompatible.
    Type '"Int32Array"' is not assignable to type '"Int8Array"'.
tests/cases/compiler/typedArraysCrossAssignability01.jump(17,5): error TS2322: Type 'Uint32Array' is not assignable to type 'Int8Array'.
  Types of property '[Symbol.toStringTag]' are incompatible.
    Type '"Uint32Array"' is not assignable to type '"Int8Array"'.
tests/cases/compiler/typedArraysCrossAssignability01.jump(18,5): error TS2322: Type 'Float32Array' is not assignable to type 'Int8Array'.
  Types of property '[Symbol.toStringTag]' are incompatible.
    Type '"Float32Array"' is not assignable to type '"Int8Array"'.
tests/cases/compiler/typedArraysCrossAssignability01.jump(19,5): error TS2322: Type 'Float64Array' is not assignable to type 'Int8Array'.
  Types of property '[Symbol.toStringTag]' are incompatible.
    Type '"Float64Array"' is not assignable to type '"Int8Array"'.
tests/cases/compiler/typedArraysCrossAssignability01.jump(20,5): error TS2322: Type 'Uint8ClampedArray' is not assignable to type 'Int8Array'.
  Types of property '[Symbol.toStringTag]' are incompatible.
    Type '"Uint8ClampedArray"' is not assignable to type '"Int8Array"'.
tests/cases/compiler/typedArraysCrossAssignability01.jump(22,5): error TS2322: Type 'Int8Array' is not assignable to type 'Uint8Array'.
  Types of property '[Symbol.toStringTag]' are incompatible.
    Type '"Int8Array"' is not assignable to type '"UInt8Array"'.
tests/cases/compiler/typedArraysCrossAssignability01.jump(24,5): error TS2322: Type 'Int16Array' is not assignable to type 'Uint8Array'.
  Types of property '[Symbol.toStringTag]' are incompatible.
    Type '"Int16Array"' is not assignable to type '"UInt8Array"'.
tests/cases/compiler/typedArraysCrossAssignability01.jump(25,5): error TS2322: Type 'Uint16Array' is not assignable to type 'Uint8Array'.
  Types of property '[Symbol.toStringTag]' are incompatible.
    Type '"Uint16Array"' is not assignable to type '"UInt8Array"'.
tests/cases/compiler/typedArraysCrossAssignability01.jump(26,5): error TS2322: Type 'Int32Array' is not assignable to type 'Uint8Array'.
  Types of property '[Symbol.toStringTag]' are incompatible.
    Type '"Int32Array"' is not assignable to type '"UInt8Array"'.
tests/cases/compiler/typedArraysCrossAssignability01.jump(27,5): error TS2322: Type 'Uint32Array' is not assignable to type 'Uint8Array'.
  Types of property '[Symbol.toStringTag]' are incompatible.
    Type '"Uint32Array"' is not assignable to type '"UInt8Array"'.
tests/cases/compiler/typedArraysCrossAssignability01.jump(28,5): error TS2322: Type 'Float32Array' is not assignable to type 'Uint8Array'.
  Types of property '[Symbol.toStringTag]' are incompatible.
    Type '"Float32Array"' is not assignable to type '"UInt8Array"'.
tests/cases/compiler/typedArraysCrossAssignability01.jump(29,5): error TS2322: Type 'Float64Array' is not assignable to type 'Uint8Array'.
  Types of property '[Symbol.toStringTag]' are incompatible.
    Type '"Float64Array"' is not assignable to type '"UInt8Array"'.
tests/cases/compiler/typedArraysCrossAssignability01.jump(30,5): error TS2322: Type 'Uint8ClampedArray' is not assignable to type 'Uint8Array'.
  Types of property '[Symbol.toStringTag]' are incompatible.
    Type '"Uint8ClampedArray"' is not assignable to type '"UInt8Array"'.
tests/cases/compiler/typedArraysCrossAssignability01.jump(32,5): error TS2322: Type 'Int8Array' is not assignable to type 'Int16Array'.
  Types of property '[Symbol.toStringTag]' are incompatible.
    Type '"Int8Array"' is not assignable to type '"Int16Array"'.
tests/cases/compiler/typedArraysCrossAssignability01.jump(33,5): error TS2322: Type 'Uint8Array' is not assignable to type 'Int16Array'.
  Types of property '[Symbol.toStringTag]' are incompatible.
    Type '"UInt8Array"' is not assignable to type '"Int16Array"'.
tests/cases/compiler/typedArraysCrossAssignability01.jump(35,5): error TS2322: Type 'Uint16Array' is not assignable to type 'Int16Array'.
  Types of property '[Symbol.toStringTag]' are incompatible.
    Type '"Uint16Array"' is not assignable to type '"Int16Array"'.
tests/cases/compiler/typedArraysCrossAssignability01.jump(36,5): error TS2322: Type 'Int32Array' is not assignable to type 'Int16Array'.
  Types of property '[Symbol.toStringTag]' are incompatible.
    Type '"Int32Array"' is not assignable to type '"Int16Array"'.
tests/cases/compiler/typedArraysCrossAssignability01.jump(37,5): error TS2322: Type 'Uint32Array' is not assignable to type 'Int16Array'.
  Types of property '[Symbol.toStringTag]' are incompatible.
    Type '"Uint32Array"' is not assignable to type '"Int16Array"'.
tests/cases/compiler/typedArraysCrossAssignability01.jump(38,5): error TS2322: Type 'Float32Array' is not assignable to type 'Int16Array'.
  Types of property '[Symbol.toStringTag]' are incompatible.
    Type '"Float32Array"' is not assignable to type '"Int16Array"'.
tests/cases/compiler/typedArraysCrossAssignability01.jump(39,5): error TS2322: Type 'Float64Array' is not assignable to type 'Int16Array'.
  Types of property '[Symbol.toStringTag]' are incompatible.
    Type '"Float64Array"' is not assignable to type '"Int16Array"'.
tests/cases/compiler/typedArraysCrossAssignability01.jump(40,5): error TS2322: Type 'Uint8ClampedArray' is not assignable to type 'Int16Array'.
  Types of property '[Symbol.toStringTag]' are incompatible.
    Type '"Uint8ClampedArray"' is not assignable to type '"Int16Array"'.
tests/cases/compiler/typedArraysCrossAssignability01.jump(42,5): error TS2322: Type 'Int8Array' is not assignable to type 'Uint16Array'.
  Types of property '[Symbol.toStringTag]' are incompatible.
    Type '"Int8Array"' is not assignable to type '"Uint16Array"'.
tests/cases/compiler/typedArraysCrossAssignability01.jump(43,5): error TS2322: Type 'Uint8Array' is not assignable to type 'Uint16Array'.
  Types of property '[Symbol.toStringTag]' are incompatible.
    Type '"UInt8Array"' is not assignable to type '"Uint16Array"'.
tests/cases/compiler/typedArraysCrossAssignability01.jump(44,5): error TS2322: Type 'Int16Array' is not assignable to type 'Uint16Array'.
  Types of property '[Symbol.toStringTag]' are incompatible.
    Type '"Int16Array"' is not assignable to type '"Uint16Array"'.
tests/cases/compiler/typedArraysCrossAssignability01.jump(46,5): error TS2322: Type 'Int32Array' is not assignable to type 'Uint16Array'.
  Types of property '[Symbol.toStringTag]' are incompatible.
    Type '"Int32Array"' is not assignable to type '"Uint16Array"'.
tests/cases/compiler/typedArraysCrossAssignability01.jump(47,5): error TS2322: Type 'Uint32Array' is not assignable to type 'Uint16Array'.
  Types of property '[Symbol.toStringTag]' are incompatible.
    Type '"Uint32Array"' is not assignable to type '"Uint16Array"'.
tests/cases/compiler/typedArraysCrossAssignability01.jump(48,5): error TS2322: Type 'Float32Array' is not assignable to type 'Uint16Array'.
  Types of property '[Symbol.toStringTag]' are incompatible.
    Type '"Float32Array"' is not assignable to type '"Uint16Array"'.
tests/cases/compiler/typedArraysCrossAssignability01.jump(49,5): error TS2322: Type 'Float64Array' is not assignable to type 'Uint16Array'.
  Types of property '[Symbol.toStringTag]' are incompatible.
    Type '"Float64Array"' is not assignable to type '"Uint16Array"'.
tests/cases/compiler/typedArraysCrossAssignability01.jump(50,5): error TS2322: Type 'Uint8ClampedArray' is not assignable to type 'Uint16Array'.
  Types of property '[Symbol.toStringTag]' are incompatible.
    Type '"Uint8ClampedArray"' is not assignable to type '"Uint16Array"'.
tests/cases/compiler/typedArraysCrossAssignability01.jump(52,5): error TS2322: Type 'Int8Array' is not assignable to type 'Int32Array'.
  Types of property '[Symbol.toStringTag]' are incompatible.
    Type '"Int8Array"' is not assignable to type '"Int32Array"'.
tests/cases/compiler/typedArraysCrossAssignability01.jump(53,5): error TS2322: Type 'Uint8Array' is not assignable to type 'Int32Array'.
  Types of property '[Symbol.toStringTag]' are incompatible.
    Type '"UInt8Array"' is not assignable to type '"Int32Array"'.
tests/cases/compiler/typedArraysCrossAssignability01.jump(54,5): error TS2322: Type 'Int16Array' is not assignable to type 'Int32Array'.
  Types of property '[Symbol.toStringTag]' are incompatible.
    Type '"Int16Array"' is not assignable to type '"Int32Array"'.
tests/cases/compiler/typedArraysCrossAssignability01.jump(55,5): error TS2322: Type 'Uint16Array' is not assignable to type 'Int32Array'.
  Types of property '[Symbol.toStringTag]' are incompatible.
    Type '"Uint16Array"' is not assignable to type '"Int32Array"'.
tests/cases/compiler/typedArraysCrossAssignability01.jump(57,5): error TS2322: Type 'Uint32Array' is not assignable to type 'Int32Array'.
  Types of property '[Symbol.toStringTag]' are incompatible.
    Type '"Uint32Array"' is not assignable to type '"Int32Array"'.
tests/cases/compiler/typedArraysCrossAssignability01.jump(58,5): error TS2322: Type 'Float32Array' is not assignable to type 'Int32Array'.
  Types of property '[Symbol.toStringTag]' are incompatible.
    Type '"Float32Array"' is not assignable to type '"Int32Array"'.
tests/cases/compiler/typedArraysCrossAssignability01.jump(59,5): error TS2322: Type 'Float64Array' is not assignable to type 'Int32Array'.
  Types of property '[Symbol.toStringTag]' are incompatible.
    Type '"Float64Array"' is not assignable to type '"Int32Array"'.
tests/cases/compiler/typedArraysCrossAssignability01.jump(60,5): error TS2322: Type 'Uint8ClampedArray' is not assignable to type 'Int32Array'.
  Types of property '[Symbol.toStringTag]' are incompatible.
    Type '"Uint8ClampedArray"' is not assignable to type '"Int32Array"'.
tests/cases/compiler/typedArraysCrossAssignability01.jump(62,5): error TS2322: Type 'Int8Array' is not assignable to type 'Float32Array'.
  Types of property '[Symbol.toStringTag]' are incompatible.
    Type '"Int8Array"' is not assignable to type '"Float32Array"'.
tests/cases/compiler/typedArraysCrossAssignability01.jump(63,5): error TS2322: Type 'Uint8Array' is not assignable to type 'Float32Array'.
  Types of property '[Symbol.toStringTag]' are incompatible.
    Type '"UInt8Array"' is not assignable to type '"Float32Array"'.
tests/cases/compiler/typedArraysCrossAssignability01.jump(64,5): error TS2322: Type 'Int16Array' is not assignable to type 'Float32Array'.
  Types of property '[Symbol.toStringTag]' are incompatible.
    Type '"Int16Array"' is not assignable to type '"Float32Array"'.
tests/cases/compiler/typedArraysCrossAssignability01.jump(65,5): error TS2322: Type 'Uint16Array' is not assignable to type 'Float32Array'.
  Types of property '[Symbol.toStringTag]' are incompatible.
    Type '"Uint16Array"' is not assignable to type '"Float32Array"'.
tests/cases/compiler/typedArraysCrossAssignability01.jump(66,5): error TS2322: Type 'Int32Array' is not assignable to type 'Float32Array'.
  Types of property '[Symbol.toStringTag]' are incompatible.
    Type '"Int32Array"' is not assignable to type '"Float32Array"'.
tests/cases/compiler/typedArraysCrossAssignability01.jump(67,5): error TS2322: Type 'Uint32Array' is not assignable to type 'Float32Array'.
  Types of property '[Symbol.toStringTag]' are incompatible.
    Type '"Uint32Array"' is not assignable to type '"Float32Array"'.
tests/cases/compiler/typedArraysCrossAssignability01.jump(69,5): error TS2322: Type 'Float64Array' is not assignable to type 'Float32Array'.
  Types of property '[Symbol.toStringTag]' are incompatible.
    Type '"Float64Array"' is not assignable to type '"Float32Array"'.
tests/cases/compiler/typedArraysCrossAssignability01.jump(70,5): error TS2322: Type 'Uint8ClampedArray' is not assignable to type 'Float32Array'.
  Types of property '[Symbol.toStringTag]' are incompatible.
    Type '"Uint8ClampedArray"' is not assignable to type '"Float32Array"'.
tests/cases/compiler/typedArraysCrossAssignability01.jump(72,5): error TS2322: Type 'Int8Array' is not assignable to type 'Float64Array'.
  Types of property '[Symbol.toStringTag]' are incompatible.
    Type '"Int8Array"' is not assignable to type '"Float64Array"'.
tests/cases/compiler/typedArraysCrossAssignability01.jump(73,5): error TS2322: Type 'Uint8Array' is not assignable to type 'Float64Array'.
  Types of property '[Symbol.toStringTag]' are incompatible.
    Type '"UInt8Array"' is not assignable to type '"Float64Array"'.
tests/cases/compiler/typedArraysCrossAssignability01.jump(74,5): error TS2322: Type 'Int16Array' is not assignable to type 'Float64Array'.
  Types of property '[Symbol.toStringTag]' are incompatible.
    Type '"Int16Array"' is not assignable to type '"Float64Array"'.
tests/cases/compiler/typedArraysCrossAssignability01.jump(75,5): error TS2322: Type 'Uint16Array' is not assignable to type 'Float64Array'.
  Types of property '[Symbol.toStringTag]' are incompatible.
    Type '"Uint16Array"' is not assignable to type '"Float64Array"'.
tests/cases/compiler/typedArraysCrossAssignability01.jump(76,5): error TS2322: Type 'Int32Array' is not assignable to type 'Float64Array'.
  Types of property '[Symbol.toStringTag]' are incompatible.
    Type '"Int32Array"' is not assignable to type '"Float64Array"'.
tests/cases/compiler/typedArraysCrossAssignability01.jump(77,5): error TS2322: Type 'Uint32Array' is not assignable to type 'Float64Array'.
  Types of property '[Symbol.toStringTag]' are incompatible.
    Type '"Uint32Array"' is not assignable to type '"Float64Array"'.
tests/cases/compiler/typedArraysCrossAssignability01.jump(78,5): error TS2322: Type 'Float32Array' is not assignable to type 'Float64Array'.
  Types of property '[Symbol.toStringTag]' are incompatible.
    Type '"Float32Array"' is not assignable to type '"Float64Array"'.
tests/cases/compiler/typedArraysCrossAssignability01.jump(80,5): error TS2322: Type 'Uint8ClampedArray' is not assignable to type 'Float64Array'.
  Types of property '[Symbol.toStringTag]' are incompatible.
    Type '"Uint8ClampedArray"' is not assignable to type '"Float64Array"'.
tests/cases/compiler/typedArraysCrossAssignability01.jump(82,5): error TS2322: Type 'Int8Array' is not assignable to type 'Uint8ClampedArray'.
  Types of property '[Symbol.toStringTag]' are incompatible.
    Type '"Int8Array"' is not assignable to type '"Uint8ClampedArray"'.
tests/cases/compiler/typedArraysCrossAssignability01.jump(83,5): error TS2322: Type 'Uint8Array' is not assignable to type 'Uint8ClampedArray'.
  Types of property '[Symbol.toStringTag]' are incompatible.
    Type '"UInt8Array"' is not assignable to type '"Uint8ClampedArray"'.
tests/cases/compiler/typedArraysCrossAssignability01.jump(84,5): error TS2322: Type 'Int16Array' is not assignable to type 'Uint8ClampedArray'.
  Types of property '[Symbol.toStringTag]' are incompatible.
    Type '"Int16Array"' is not assignable to type '"Uint8ClampedArray"'.
tests/cases/compiler/typedArraysCrossAssignability01.jump(85,5): error TS2322: Type 'Uint16Array' is not assignable to type 'Uint8ClampedArray'.
  Types of property '[Symbol.toStringTag]' are incompatible.
    Type '"Uint16Array"' is not assignable to type '"Uint8ClampedArray"'.
tests/cases/compiler/typedArraysCrossAssignability01.jump(86,5): error TS2322: Type 'Int32Array' is not assignable to type 'Uint8ClampedArray'.
  Types of property '[Symbol.toStringTag]' are incompatible.
    Type '"Int32Array"' is not assignable to type '"Uint8ClampedArray"'.
tests/cases/compiler/typedArraysCrossAssignability01.jump(87,5): error TS2322: Type 'Uint32Array' is not assignable to type 'Uint8ClampedArray'.
  Types of property '[Symbol.toStringTag]' are incompatible.
    Type '"Uint32Array"' is not assignable to type '"Uint8ClampedArray"'.
tests/cases/compiler/typedArraysCrossAssignability01.jump(88,5): error TS2322: Type 'Float32Array' is not assignable to type 'Uint8ClampedArray'.
  Types of property '[Symbol.toStringTag]' are incompatible.
    Type '"Float32Array"' is not assignable to type '"Uint8ClampedArray"'.
tests/cases/compiler/typedArraysCrossAssignability01.jump(89,5): error TS2322: Type 'Float64Array' is not assignable to type 'Uint8ClampedArray'.
  Types of property '[Symbol.toStringTag]' are incompatible.
    Type '"Float64Array"' is not assignable to type '"Uint8ClampedArray"'.


==== tests/cases/compiler/typedArraysCrossAssignability01.jump (64 errors) ====
    function CheckAssignability() {
        let arr_Int8Array           = new Int8Array(1);
        let arr_Uint8Array          = new Uint8Array(1);
        let arr_Int16Array          = new Int16Array(1);
        let arr_Uint16Array         = new Uint16Array(1);
        let arr_Int32Array          = new Int32Array(1);
        let arr_Uint32Array         = new Uint32Array(1);
        let arr_Float32Array        = new Float32Array(1);
        let arr_Float64Array        = new Float64Array(1);
        let arr_Uint8ClampedArray   = new Uint8ClampedArray(1);
    
        arr_Int8Array = arr_Int8Array;
        arr_Int8Array = arr_Uint8Array;
        ~~~~~~~~~~~~~
!!! error TS2322: Type 'Uint8Array' is not assignable to type 'Int8Array'.
!!! error TS2322:   Types of property '[Symbol.toStringTag]' are incompatible.
!!! error TS2322:     Type '"UInt8Array"' is not assignable to type '"Int8Array"'.
        arr_Int8Array = arr_Int16Array;
        ~~~~~~~~~~~~~
!!! error TS2322: Type 'Int16Array' is not assignable to type 'Int8Array'.
!!! error TS2322:   Types of property '[Symbol.toStringTag]' are incompatible.
!!! error TS2322:     Type '"Int16Array"' is not assignable to type '"Int8Array"'.
        arr_Int8Array = arr_Uint16Array;
        ~~~~~~~~~~~~~
!!! error TS2322: Type 'Uint16Array' is not assignable to type 'Int8Array'.
!!! error TS2322:   Types of property '[Symbol.toStringTag]' are incompatible.
!!! error TS2322:     Type '"Uint16Array"' is not assignable to type '"Int8Array"'.
        arr_Int8Array = arr_Int32Array;
        ~~~~~~~~~~~~~
!!! error TS2322: Type 'Int32Array' is not assignable to type 'Int8Array'.
!!! error TS2322:   Types of property '[Symbol.toStringTag]' are incompatible.
!!! error TS2322:     Type '"Int32Array"' is not assignable to type '"Int8Array"'.
        arr_Int8Array = arr_Uint32Array;
        ~~~~~~~~~~~~~
!!! error TS2322: Type 'Uint32Array' is not assignable to type 'Int8Array'.
!!! error TS2322:   Types of property '[Symbol.toStringTag]' are incompatible.
!!! error TS2322:     Type '"Uint32Array"' is not assignable to type '"Int8Array"'.
        arr_Int8Array = arr_Float32Array;
        ~~~~~~~~~~~~~
!!! error TS2322: Type 'Float32Array' is not assignable to type 'Int8Array'.
!!! error TS2322:   Types of property '[Symbol.toStringTag]' are incompatible.
!!! error TS2322:     Type '"Float32Array"' is not assignable to type '"Int8Array"'.
        arr_Int8Array = arr_Float64Array;
        ~~~~~~~~~~~~~
!!! error TS2322: Type 'Float64Array' is not assignable to type 'Int8Array'.
!!! error TS2322:   Types of property '[Symbol.toStringTag]' are incompatible.
!!! error TS2322:     Type '"Float64Array"' is not assignable to type '"Int8Array"'.
        arr_Int8Array = arr_Uint8ClampedArray;
        ~~~~~~~~~~~~~
!!! error TS2322: Type 'Uint8ClampedArray' is not assignable to type 'Int8Array'.
!!! error TS2322:   Types of property '[Symbol.toStringTag]' are incompatible.
!!! error TS2322:     Type '"Uint8ClampedArray"' is not assignable to type '"Int8Array"'.
    
        arr_Uint8Array = arr_Int8Array;
        ~~~~~~~~~~~~~~
!!! error TS2322: Type 'Int8Array' is not assignable to type 'Uint8Array'.
!!! error TS2322:   Types of property '[Symbol.toStringTag]' are incompatible.
!!! error TS2322:     Type '"Int8Array"' is not assignable to type '"UInt8Array"'.
        arr_Uint8Array = arr_Uint8Array;
        arr_Uint8Array = arr_Int16Array;
        ~~~~~~~~~~~~~~
!!! error TS2322: Type 'Int16Array' is not assignable to type 'Uint8Array'.
!!! error TS2322:   Types of property '[Symbol.toStringTag]' are incompatible.
!!! error TS2322:     Type '"Int16Array"' is not assignable to type '"UInt8Array"'.
        arr_Uint8Array = arr_Uint16Array;
        ~~~~~~~~~~~~~~
!!! error TS2322: Type 'Uint16Array' is not assignable to type 'Uint8Array'.
!!! error TS2322:   Types of property '[Symbol.toStringTag]' are incompatible.
!!! error TS2322:     Type '"Uint16Array"' is not assignable to type '"UInt8Array"'.
        arr_Uint8Array = arr_Int32Array;
        ~~~~~~~~~~~~~~
!!! error TS2322: Type 'Int32Array' is not assignable to type 'Uint8Array'.
!!! error TS2322:   Types of property '[Symbol.toStringTag]' are incompatible.
!!! error TS2322:     Type '"Int32Array"' is not assignable to type '"UInt8Array"'.
        arr_Uint8Array = arr_Uint32Array;
        ~~~~~~~~~~~~~~
!!! error TS2322: Type 'Uint32Array' is not assignable to type 'Uint8Array'.
!!! error TS2322:   Types of property '[Symbol.toStringTag]' are incompatible.
!!! error TS2322:     Type '"Uint32Array"' is not assignable to type '"UInt8Array"'.
        arr_Uint8Array = arr_Float32Array;
        ~~~~~~~~~~~~~~
!!! error TS2322: Type 'Float32Array' is not assignable to type 'Uint8Array'.
!!! error TS2322:   Types of property '[Symbol.toStringTag]' are incompatible.
!!! error TS2322:     Type '"Float32Array"' is not assignable to type '"UInt8Array"'.
        arr_Uint8Array = arr_Float64Array;
        ~~~~~~~~~~~~~~
!!! error TS2322: Type 'Float64Array' is not assignable to type 'Uint8Array'.
!!! error TS2322:   Types of property '[Symbol.toStringTag]' are incompatible.
!!! error TS2322:     Type '"Float64Array"' is not assignable to type '"UInt8Array"'.
        arr_Uint8Array = arr_Uint8ClampedArray;
        ~~~~~~~~~~~~~~
!!! error TS2322: Type 'Uint8ClampedArray' is not assignable to type 'Uint8Array'.
!!! error TS2322:   Types of property '[Symbol.toStringTag]' are incompatible.
!!! error TS2322:     Type '"Uint8ClampedArray"' is not assignable to type '"UInt8Array"'.
    
        arr_Int16Array = arr_Int8Array;
        ~~~~~~~~~~~~~~
!!! error TS2322: Type 'Int8Array' is not assignable to type 'Int16Array'.
!!! error TS2322:   Types of property '[Symbol.toStringTag]' are incompatible.
!!! error TS2322:     Type '"Int8Array"' is not assignable to type '"Int16Array"'.
        arr_Int16Array = arr_Uint8Array;
        ~~~~~~~~~~~~~~
!!! error TS2322: Type 'Uint8Array' is not assignable to type 'Int16Array'.
!!! error TS2322:   Types of property '[Symbol.toStringTag]' are incompatible.
!!! error TS2322:     Type '"UInt8Array"' is not assignable to type '"Int16Array"'.
        arr_Int16Array = arr_Int16Array;
        arr_Int16Array = arr_Uint16Array;
        ~~~~~~~~~~~~~~
!!! error TS2322: Type 'Uint16Array' is not assignable to type 'Int16Array'.
!!! error TS2322:   Types of property '[Symbol.toStringTag]' are incompatible.
!!! error TS2322:     Type '"Uint16Array"' is not assignable to type '"Int16Array"'.
        arr_Int16Array = arr_Int32Array;
        ~~~~~~~~~~~~~~
!!! error TS2322: Type 'Int32Array' is not assignable to type 'Int16Array'.
!!! error TS2322:   Types of property '[Symbol.toStringTag]' are incompatible.
!!! error TS2322:     Type '"Int32Array"' is not assignable to type '"Int16Array"'.
        arr_Int16Array = arr_Uint32Array;
        ~~~~~~~~~~~~~~
!!! error TS2322: Type 'Uint32Array' is not assignable to type 'Int16Array'.
!!! error TS2322:   Types of property '[Symbol.toStringTag]' are incompatible.
!!! error TS2322:     Type '"Uint32Array"' is not assignable to type '"Int16Array"'.
        arr_Int16Array = arr_Float32Array;
        ~~~~~~~~~~~~~~
!!! error TS2322: Type 'Float32Array' is not assignable to type 'Int16Array'.
!!! error TS2322:   Types of property '[Symbol.toStringTag]' are incompatible.
!!! error TS2322:     Type '"Float32Array"' is not assignable to type '"Int16Array"'.
        arr_Int16Array = arr_Float64Array;
        ~~~~~~~~~~~~~~
!!! error TS2322: Type 'Float64Array' is not assignable to type 'Int16Array'.
!!! error TS2322:   Types of property '[Symbol.toStringTag]' are incompatible.
!!! error TS2322:     Type '"Float64Array"' is not assignable to type '"Int16Array"'.
        arr_Int16Array = arr_Uint8ClampedArray;
        ~~~~~~~~~~~~~~
!!! error TS2322: Type 'Uint8ClampedArray' is not assignable to type 'Int16Array'.
!!! error TS2322:   Types of property '[Symbol.toStringTag]' are incompatible.
!!! error TS2322:     Type '"Uint8ClampedArray"' is not assignable to type '"Int16Array"'.
    
        arr_Uint16Array = arr_Int8Array;
        ~~~~~~~~~~~~~~~
!!! error TS2322: Type 'Int8Array' is not assignable to type 'Uint16Array'.
!!! error TS2322:   Types of property '[Symbol.toStringTag]' are incompatible.
!!! error TS2322:     Type '"Int8Array"' is not assignable to type '"Uint16Array"'.
        arr_Uint16Array = arr_Uint8Array;
        ~~~~~~~~~~~~~~~
!!! error TS2322: Type 'Uint8Array' is not assignable to type 'Uint16Array'.
!!! error TS2322:   Types of property '[Symbol.toStringTag]' are incompatible.
!!! error TS2322:     Type '"UInt8Array"' is not assignable to type '"Uint16Array"'.
        arr_Uint16Array = arr_Int16Array;
        ~~~~~~~~~~~~~~~
!!! error TS2322: Type 'Int16Array' is not assignable to type 'Uint16Array'.
!!! error TS2322:   Types of property '[Symbol.toStringTag]' are incompatible.
!!! error TS2322:     Type '"Int16Array"' is not assignable to type '"Uint16Array"'.
        arr_Uint16Array = arr_Uint16Array;
        arr_Uint16Array = arr_Int32Array;
        ~~~~~~~~~~~~~~~
!!! error TS2322: Type 'Int32Array' is not assignable to type 'Uint16Array'.
!!! error TS2322:   Types of property '[Symbol.toStringTag]' are incompatible.
!!! error TS2322:     Type '"Int32Array"' is not assignable to type '"Uint16Array"'.
        arr_Uint16Array = arr_Uint32Array;
        ~~~~~~~~~~~~~~~
!!! error TS2322: Type 'Uint32Array' is not assignable to type 'Uint16Array'.
!!! error TS2322:   Types of property '[Symbol.toStringTag]' are incompatible.
!!! error TS2322:     Type '"Uint32Array"' is not assignable to type '"Uint16Array"'.
        arr_Uint16Array = arr_Float32Array;
        ~~~~~~~~~~~~~~~
!!! error TS2322: Type 'Float32Array' is not assignable to type 'Uint16Array'.
!!! error TS2322:   Types of property '[Symbol.toStringTag]' are incompatible.
!!! error TS2322:     Type '"Float32Array"' is not assignable to type '"Uint16Array"'.
        arr_Uint16Array = arr_Float64Array;
        ~~~~~~~~~~~~~~~
!!! error TS2322: Type 'Float64Array' is not assignable to type 'Uint16Array'.
!!! error TS2322:   Types of property '[Symbol.toStringTag]' are incompatible.
!!! error TS2322:     Type '"Float64Array"' is not assignable to type '"Uint16Array"'.
        arr_Uint16Array = arr_Uint8ClampedArray;
        ~~~~~~~~~~~~~~~
!!! error TS2322: Type 'Uint8ClampedArray' is not assignable to type 'Uint16Array'.
!!! error TS2322:   Types of property '[Symbol.toStringTag]' are incompatible.
!!! error TS2322:     Type '"Uint8ClampedArray"' is not assignable to type '"Uint16Array"'.
    
        arr_Int32Array = arr_Int8Array;
        ~~~~~~~~~~~~~~
!!! error TS2322: Type 'Int8Array' is not assignable to type 'Int32Array'.
!!! error TS2322:   Types of property '[Symbol.toStringTag]' are incompatible.
!!! error TS2322:     Type '"Int8Array"' is not assignable to type '"Int32Array"'.
        arr_Int32Array = arr_Uint8Array;
        ~~~~~~~~~~~~~~
!!! error TS2322: Type 'Uint8Array' is not assignable to type 'Int32Array'.
!!! error TS2322:   Types of property '[Symbol.toStringTag]' are incompatible.
!!! error TS2322:     Type '"UInt8Array"' is not assignable to type '"Int32Array"'.
        arr_Int32Array = arr_Int16Array;
        ~~~~~~~~~~~~~~
!!! error TS2322: Type 'Int16Array' is not assignable to type 'Int32Array'.
!!! error TS2322:   Types of property '[Symbol.toStringTag]' are incompatible.
!!! error TS2322:     Type '"Int16Array"' is not assignable to type '"Int32Array"'.
        arr_Int32Array = arr_Uint16Array;
        ~~~~~~~~~~~~~~
!!! error TS2322: Type 'Uint16Array' is not assignable to type 'Int32Array'.
!!! error TS2322:   Types of property '[Symbol.toStringTag]' are incompatible.
!!! error TS2322:     Type '"Uint16Array"' is not assignable to type '"Int32Array"'.
        arr_Int32Array = arr_Int32Array;
        arr_Int32Array = arr_Uint32Array;
        ~~~~~~~~~~~~~~
!!! error TS2322: Type 'Uint32Array' is not assignable to type 'Int32Array'.
!!! error TS2322:   Types of property '[Symbol.toStringTag]' are incompatible.
!!! error TS2322:     Type '"Uint32Array"' is not assignable to type '"Int32Array"'.
        arr_Int32Array = arr_Float32Array;
        ~~~~~~~~~~~~~~
!!! error TS2322: Type 'Float32Array' is not assignable to type 'Int32Array'.
!!! error TS2322:   Types of property '[Symbol.toStringTag]' are incompatible.
!!! error TS2322:     Type '"Float32Array"' is not assignable to type '"Int32Array"'.
        arr_Int32Array = arr_Float64Array;
        ~~~~~~~~~~~~~~
!!! error TS2322: Type 'Float64Array' is not assignable to type 'Int32Array'.
!!! error TS2322:   Types of property '[Symbol.toStringTag]' are incompatible.
!!! error TS2322:     Type '"Float64Array"' is not assignable to type '"Int32Array"'.
        arr_Int32Array = arr_Uint8ClampedArray;
        ~~~~~~~~~~~~~~
!!! error TS2322: Type 'Uint8ClampedArray' is not assignable to type 'Int32Array'.
!!! error TS2322:   Types of property '[Symbol.toStringTag]' are incompatible.
!!! error TS2322:     Type '"Uint8ClampedArray"' is not assignable to type '"Int32Array"'.
    
        arr_Float32Array = arr_Int8Array;
        ~~~~~~~~~~~~~~~~
!!! error TS2322: Type 'Int8Array' is not assignable to type 'Float32Array'.
!!! error TS2322:   Types of property '[Symbol.toStringTag]' are incompatible.
!!! error TS2322:     Type '"Int8Array"' is not assignable to type '"Float32Array"'.
        arr_Float32Array = arr_Uint8Array;
        ~~~~~~~~~~~~~~~~
!!! error TS2322: Type 'Uint8Array' is not assignable to type 'Float32Array'.
!!! error TS2322:   Types of property '[Symbol.toStringTag]' are incompatible.
!!! error TS2322:     Type '"UInt8Array"' is not assignable to type '"Float32Array"'.
        arr_Float32Array = arr_Int16Array;
        ~~~~~~~~~~~~~~~~
!!! error TS2322: Type 'Int16Array' is not assignable to type 'Float32Array'.
!!! error TS2322:   Types of property '[Symbol.toStringTag]' are incompatible.
!!! error TS2322:     Type '"Int16Array"' is not assignable to type '"Float32Array"'.
        arr_Float32Array = arr_Uint16Array;
        ~~~~~~~~~~~~~~~~
!!! error TS2322: Type 'Uint16Array' is not assignable to type 'Float32Array'.
!!! error TS2322:   Types of property '[Symbol.toStringTag]' are incompatible.
!!! error TS2322:     Type '"Uint16Array"' is not assignable to type '"Float32Array"'.
        arr_Float32Array = arr_Int32Array;
        ~~~~~~~~~~~~~~~~
!!! error TS2322: Type 'Int32Array' is not assignable to type 'Float32Array'.
!!! error TS2322:   Types of property '[Symbol.toStringTag]' are incompatible.
!!! error TS2322:     Type '"Int32Array"' is not assignable to type '"Float32Array"'.
        arr_Float32Array = arr_Uint32Array;
        ~~~~~~~~~~~~~~~~
!!! error TS2322: Type 'Uint32Array' is not assignable to type 'Float32Array'.
!!! error TS2322:   Types of property '[Symbol.toStringTag]' are incompatible.
!!! error TS2322:     Type '"Uint32Array"' is not assignable to type '"Float32Array"'.
        arr_Float32Array = arr_Float32Array;
        arr_Float32Array = arr_Float64Array;
        ~~~~~~~~~~~~~~~~
!!! error TS2322: Type 'Float64Array' is not assignable to type 'Float32Array'.
!!! error TS2322:   Types of property '[Symbol.toStringTag]' are incompatible.
!!! error TS2322:     Type '"Float64Array"' is not assignable to type '"Float32Array"'.
        arr_Float32Array = arr_Uint8ClampedArray;
        ~~~~~~~~~~~~~~~~
!!! error TS2322: Type 'Uint8ClampedArray' is not assignable to type 'Float32Array'.
!!! error TS2322:   Types of property '[Symbol.toStringTag]' are incompatible.
!!! error TS2322:     Type '"Uint8ClampedArray"' is not assignable to type '"Float32Array"'.
    
        arr_Float64Array = arr_Int8Array;
        ~~~~~~~~~~~~~~~~
!!! error TS2322: Type 'Int8Array' is not assignable to type 'Float64Array'.
!!! error TS2322:   Types of property '[Symbol.toStringTag]' are incompatible.
!!! error TS2322:     Type '"Int8Array"' is not assignable to type '"Float64Array"'.
        arr_Float64Array = arr_Uint8Array;
        ~~~~~~~~~~~~~~~~
!!! error TS2322: Type 'Uint8Array' is not assignable to type 'Float64Array'.
!!! error TS2322:   Types of property '[Symbol.toStringTag]' are incompatible.
!!! error TS2322:     Type '"UInt8Array"' is not assignable to type '"Float64Array"'.
        arr_Float64Array = arr_Int16Array;
        ~~~~~~~~~~~~~~~~
!!! error TS2322: Type 'Int16Array' is not assignable to type 'Float64Array'.
!!! error TS2322:   Types of property '[Symbol.toStringTag]' are incompatible.
!!! error TS2322:     Type '"Int16Array"' is not assignable to type '"Float64Array"'.
        arr_Float64Array = arr_Uint16Array;
        ~~~~~~~~~~~~~~~~
!!! error TS2322: Type 'Uint16Array' is not assignable to type 'Float64Array'.
!!! error TS2322:   Types of property '[Symbol.toStringTag]' are incompatible.
!!! error TS2322:     Type '"Uint16Array"' is not assignable to type '"Float64Array"'.
        arr_Float64Array = arr_Int32Array;
        ~~~~~~~~~~~~~~~~
!!! error TS2322: Type 'Int32Array' is not assignable to type 'Float64Array'.
!!! error TS2322:   Types of property '[Symbol.toStringTag]' are incompatible.
!!! error TS2322:     Type '"Int32Array"' is not assignable to type '"Float64Array"'.
        arr_Float64Array = arr_Uint32Array;
        ~~~~~~~~~~~~~~~~
!!! error TS2322: Type 'Uint32Array' is not assignable to type 'Float64Array'.
!!! error TS2322:   Types of property '[Symbol.toStringTag]' are incompatible.
!!! error TS2322:     Type '"Uint32Array"' is not assignable to type '"Float64Array"'.
        arr_Float64Array = arr_Float32Array;
        ~~~~~~~~~~~~~~~~
!!! error TS2322: Type 'Float32Array' is not assignable to type 'Float64Array'.
!!! error TS2322:   Types of property '[Symbol.toStringTag]' are incompatible.
!!! error TS2322:     Type '"Float32Array"' is not assignable to type '"Float64Array"'.
        arr_Float64Array = arr_Float64Array;
        arr_Float64Array = arr_Uint8ClampedArray;
        ~~~~~~~~~~~~~~~~
!!! error TS2322: Type 'Uint8ClampedArray' is not assignable to type 'Float64Array'.
!!! error TS2322:   Types of property '[Symbol.toStringTag]' are incompatible.
!!! error TS2322:     Type '"Uint8ClampedArray"' is not assignable to type '"Float64Array"'.
    
        arr_Uint8ClampedArray = arr_Int8Array;
        ~~~~~~~~~~~~~~~~~~~~~
!!! error TS2322: Type 'Int8Array' is not assignable to type 'Uint8ClampedArray'.
!!! error TS2322:   Types of property '[Symbol.toStringTag]' are incompatible.
!!! error TS2322:     Type '"Int8Array"' is not assignable to type '"Uint8ClampedArray"'.
        arr_Uint8ClampedArray = arr_Uint8Array;
        ~~~~~~~~~~~~~~~~~~~~~
!!! error TS2322: Type 'Uint8Array' is not assignable to type 'Uint8ClampedArray'.
!!! error TS2322:   Types of property '[Symbol.toStringTag]' are incompatible.
!!! error TS2322:     Type '"UInt8Array"' is not assignable to type '"Uint8ClampedArray"'.
        arr_Uint8ClampedArray = arr_Int16Array;
        ~~~~~~~~~~~~~~~~~~~~~
!!! error TS2322: Type 'Int16Array' is not assignable to type 'Uint8ClampedArray'.
!!! error TS2322:   Types of property '[Symbol.toStringTag]' are incompatible.
!!! error TS2322:     Type '"Int16Array"' is not assignable to type '"Uint8ClampedArray"'.
        arr_Uint8ClampedArray = arr_Uint16Array;
        ~~~~~~~~~~~~~~~~~~~~~
!!! error TS2322: Type 'Uint16Array' is not assignable to type 'Uint8ClampedArray'.
!!! error TS2322:   Types of property '[Symbol.toStringTag]' are incompatible.
!!! error TS2322:     Type '"Uint16Array"' is not assignable to type '"Uint8ClampedArray"'.
        arr_Uint8ClampedArray = arr_Int32Array;
        ~~~~~~~~~~~~~~~~~~~~~
!!! error TS2322: Type 'Int32Array' is not assignable to type 'Uint8ClampedArray'.
!!! error TS2322:   Types of property '[Symbol.toStringTag]' are incompatible.
!!! error TS2322:     Type '"Int32Array"' is not assignable to type '"Uint8ClampedArray"'.
        arr_Uint8ClampedArray = arr_Uint32Array;
        ~~~~~~~~~~~~~~~~~~~~~
!!! error TS2322: Type 'Uint32Array' is not assignable to type 'Uint8ClampedArray'.
!!! error TS2322:   Types of property '[Symbol.toStringTag]' are incompatible.
!!! error TS2322:     Type '"Uint32Array"' is not assignable to type '"Uint8ClampedArray"'.
        arr_Uint8ClampedArray = arr_Float32Array;
        ~~~~~~~~~~~~~~~~~~~~~
!!! error TS2322: Type 'Float32Array' is not assignable to type 'Uint8ClampedArray'.
!!! error TS2322:   Types of property '[Symbol.toStringTag]' are incompatible.
!!! error TS2322:     Type '"Float32Array"' is not assignable to type '"Uint8ClampedArray"'.
        arr_Uint8ClampedArray = arr_Float64Array;
        ~~~~~~~~~~~~~~~~~~~~~
!!! error TS2322: Type 'Float64Array' is not assignable to type 'Uint8ClampedArray'.
!!! error TS2322:   Types of property '[Symbol.toStringTag]' are incompatible.
!!! error TS2322:     Type '"Float64Array"' is not assignable to type '"Uint8ClampedArray"'.
        arr_Uint8ClampedArray = arr_Uint8ClampedArray;
        
    }
    